[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "profilegraph"
author = "Stefan Countryman"
author-email = "stefan.countryman@gmail.com"
home-page = "https://github.com/stefco/profilegraph"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires = ["gprof2dot"]
