[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "profilegraph"
author = "Stefan Countryman"
author-email = "stefan.countryman@gmail.com"
description-file = "README.md"
home-page = "https://github.com/stefco/profilegraph"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires = ["gprof2dot"]
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
ipy = ["ipython"]
test = ["pytest"]
dev = ["flit"]
